# Casas

./: README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: clash.rs  mod.rs  multidesk.rs
src-tauri/src/models/: clash.rs  multidesk.rs
src/components/common/: Button.tsx  Card.tsx  StatusBadge.tsx
src/components/layout/: Sidebar.tsx
src/hooks/: useClashDetect.ts  useMultiDesk.ts
src/pages/: ClashConfig.tsx  Dashboard.tsx  Settings.tsx
src/pages/MultiDesk/: index.tsx
src/services/: clash.ts  multidesk.ts
src/types/: clash.ts  multidesk.ts
