[package]
name = "clashdesk-manager"
version = "0.1.0"
description = "ClashDesk Manager - 可扩展的远程桌面配置管理器"
authors = ["ClashDesk Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
shellexpand = "3.1.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
